--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,19 @@
 		"**/CVS": true,
 		"**/.DS_Store": true,
 		"**/Thumbs.db": true,
-		"out": true
+		"out": true,
+		".idea": true,
+		"node_modules": true,
+		".gitignore": true
 	},
 	"search.exclude": {
 		"out": true // set this to false to include "out" folder in search results
 	},
 	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
 	"typescript.tsc.autoDetect": "off",
-	"hide-files.files": []
+	"hide-files.files": [
+		".idea",
+		"node_modules",
+		".gitignore"
+	]
 }
