--- a/package.json
+++ b/package.json
@@ -35,8 +35,16 @@
     },
     "commands": [
       {
-        "command": "UGsance.tree_sitter",
-        "title": "TreeSitter"
+        "command": "UGsance.new_event",
+        "title": "UGsance: Callback (event for mod)"
+      },
+      {
+        "command": "UGsance.new_host_api",
+        "title": "UGsance: Host function (API for mod)"
+      },
+      {
+        "command": "UGsance.new_data_type",
+        "title": "UGsance: Data type (info about existing type for mod)"
       },
       {
         "command": "UGsance.DefinitionProvider",
